test/libsolidity/syntaxTests/scoping/double_variable_declaration_same_scope.sol
contract test {
    function f() pure public {
        uint x;
        uint x;
    }
}
// ----
// DeclarationError: (71-77): Identifier already declared.
